--- a/public/stat220/Day27.Rmd
+++ b/public/stat220/Day27.Rmd
@@ -119,7 +119,7 @@ class: title-slide, middle
 
 # .fancy[Decision Trees and Random Forest]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
 
 `r format(Sys.Date(), ' %B %d %Y')`
@@ -181,7 +181,7 @@ class: middle
 ```{r}
 data(PimaIndiansDiabetes2)
 db <- PimaIndiansDiabetes2 %>% drop_na() %>%
-  mutate(diabetes = fct_relevel(diabetes, ref = "neg"))
+  mutate(diabetes = fct_relevel(diabetes, c("neg", "pos")))
 ```
 ]
 
@@ -404,7 +404,7 @@ class: action, middle
 <br>
 <br>
 .bq[
-- Get the class activity 26.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=39491) 
+- Get the class activity 26.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=43045) 
 - Let's work on group activity 1 together
 ]
 
@@ -588,4 +588,4 @@ class: action, middle
 
 ]
 
-`r countdown(minutes = 10, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 20, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
